src/test/ui/unboxed-closures/issue-30906.stderr
error[E0495]: cannot infer an appropriate lifetime due to conflicting requirements
  --> $DIR/issue-30906.rs:15:10
   |
LL |     test(Compose(f, |_| {}));
   |          ^^^^^^^^^^^^^^^^^^
   |
   = note: first, the lifetime cannot outlive any other region...
   = note: ...but the lifetime must also be valid for any other region...
note: ...so that the types are compatible
  --> $DIR/issue-30906.rs:15:5
   |
LL |     test(Compose(f, |_| {}));
   |     ^^^^
   = note: expected `std::ops::FnOnce<(&'x str,)>`
              found `std::ops::FnOnce<(&str,)>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0495`.
